fix: Fix z-index for facebook like box

--- a/_sass/base/_structure.scss
+++ b/_sass/base/_structure.scss
@@ -156,6 +156,7 @@ html, body {
 
 .wrapper__rows:first-child {
     overflow: visible;
+    z-index: 10;
 }
 
 @-webkit-keyframes fade {
